refactor(Request): 요청 값 클래스로 구현